# Uzombie

./: .gitignore  LICENSE  README.md  environment-working.yml  environment.yml  launch_magpie_v2.py  pyproject.toml  requirements.txt
configs/data/: magpie-reasoning.yaml
configs/model/: llama3-8b.yaml
configs/trainer/: sft.yaml  simpo.yaml
scripts/: generate_data.py  optimize_hardware.sh  run_merge.py  run_sft.py  run_simpo.py
src/uzombie/: __init__.py  cli.py
src/uzombie.egg-info/: PKG-INFO
src/uzombie/callbacks/: __init__.py  auto_dora.py  exact_time_stop.py  peso_restart.py  research.py
src/uzombie/core/: hardware.py  hybrid_projector.py
src/uzombie/data/: builders.py
src/uzombie/modeling/: merging.py  patching.py
src/uzombie/trainer/: simpo_trainer.py  uzombie_trainer.py
src/uzombie/utils/: banner.py  benchmarks.py  logger.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
