[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uzombie"
version = "1.0.2"
description = "The fastest LLM fine-tuning engine on Earth"
readme = "README.md"
authors = [{name = "Kafoo", email = "kafoo@protonmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
keywords = ["llm", "fine-tuning", "lora", "qlora", "unsloth", "galore", "dora", "fast"]
requires-python = ">=3.10"

dependencies = [
    "torch>=2.4.0",  # Users must install CUDA version first (see README)
    "unsloth==2025.12.8",           # Latest stable PyPI (supports packing)
    "unsloth_zoo==2025.12.6",       # Matching zoo
    "transformers>=4.57.0",
    "trl>=0.24.0",
    "peft>=0.18.0",
    "datasets>=4.3.0",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "huggingface-hub>=0.36.0",
    "rich>=13.0",
    "tqdm",
    "tyro",
    "tensorly>=0.9.0",
    "scikit-learn>=1.8.0",
    "psutil",
    "sentencepiece>=0.2.0",         # Required by some tokenizers
    "protobuf>=3.20.0",             # For safetensors/TRL
]

[project.optional-dependencies]
dev = [
    "pytest",
    "lm-eval>=0.4.9",
]

[project.scripts]
uzombie = "uzombie.cli:main"

[project.urls]
Homepage = "https://github.com/kafoo/uzombie"
"Bug Tracker" = "https://github.com/kafoo/uzombie/issues"
"Discussions" = "https://github.com/kafoo/uzombie/discussions"
"Leaderboard" = "https://huggingface.co/spaces/kafoo/uzombie-leaderboard"