[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uzombie"
version = "1.3.0"
description = "The fastest single/multi-GPU LLM fine-tuning engine on Earth"
readme = "README.md"
authors = [{name = "Kafoo1", email = "fawwazu8@gmail.com"}]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "llm",
    "fine-tuning",
    "lora",
    "qlora",
    "unsloth",
    "galore",
    "dora",
    "liger-kernel",
    "fast",
    "hybrid",
    "universal-subspace",
]
requires-python = ">=3.10,<=3.11"

dependencies = [
    "transformers>=4.57.0",
    "trl>=0.24.0",
    "peft>=0.18.0",
    "datasets>=4.3.0",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "huggingface-hub>=0.36.0",
    "rich>=13.0",
    "tqdm",
    "tyro",
    "tensorly>=0.9.0",
    "scikit-learn>=1.8.0",
    "psutil",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.0",
]

[project.optional-dependencies]
full = [
    "torch==2.5.0",
    "torchaudio==2.5.0+cu124",
    "torchvision==0.20.0",
    "triton==3.1.0",
]

unsloth = [
    "unsloth==2025.12.9",
    "unsloth-zoo==2025.12.7",
]

speed = [
    "liger-kernel==0.6.4",
    "xformers @ https://download.pytorch.org/whl/cu124/xformers-0.0.28.post2-cp311-cp311-manylinux_2_28_x86_64.whl",
]

dev = [
    "pytest",
    "lm-eval==0.4.9.2",
    "mergekit==0.1.4",
]

all = ["uzombie[full,unsloth,speed,dev]"]

[project.scripts]
uzombie = "uzombie.cli:main"

[project.urls]
Homepage = "https://github.com/UzombieAI/Uzombie"